umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@functional_groups_methyl-cyanate.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: edn_to_string(&results).unwrap()
---
{:atom-typing {:success true :output {:atoms ["C#h3#v" "O#n2#v2" "C#v4" "N#n#v3"] :bonds [[0 1 "1"] [1 2 "1"] [2 3 "3"]] :charge 0 :spin "#u0 #s1"}} :counts {:success true :output {:atoms ["C#h3#v" "O#n2#v2" "C#v4" "N#n#v3"] :bonds [[0 1 "1"] [1 2 "1"] [2 3 "3"]] :charge 0 :spin "#u0 #s1"}}}
