umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@functional_groups_methyl-fluoride.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: edn_to_string(&results).unwrap()
---
{:atom-typing {:success true :output {:atoms ["C#h3#v" "F#n3#v"] :bonds [[0 1 "1"]] :charge 0 :spin "#u0 #s1"}} :counts {:success true :output {:atoms ["C#h3#v" "F#n3#v"] :bonds [[0 1 "1"]] :charge 0 :spin "#u0 #s1"}}}
