umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@functional_groups_methyl-isocyanide.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing {
    :output {
      :atoms ["C#h3#v" "N#c+#v4" "C#c-#n#v3"]
      :bonds [[0 1 :single] [1 2 :triple]]}
    :success true}
  :counts {
    :output {
      :atoms ["C#h3#v" "N#c+#v4" "C#c-#n#v3"]
      :bonds [[0 1 :single] [1 2 :triple]]}
    :success true}}
