umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@functional_groups_methyl-isothiocyanate.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: edn_to_string(&results).unwrap()
---
{:atom-typing {:success true :output {:atoms {"0" "C#h3#v" "1" "N#n#v3" "2" "C#v4" "3" "S#n2#v2"} :bonds [[0 1 "1"] [1 2 "2"] [2 3 "2"]] :charge 0 :spin "#u0 #s1"}} :counts {:success true :output {:atoms {"0" "C#h3#v" "1" "N#n#v3" "2" "C#v4" "3" "S#n2#v2"} :bonds [[0 1 "1"] [1 2 "2"] [2 3 "2"]] :charge 0 :spin "#u0 #s1"}}}
