umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@functional_groups_methyl-nitrite.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing {
    :output {
      :atoms ["C#h3#v" "O#n2#v2" "N#n#v3" "O#n2#v2"]
      :bonds [[0 1 :single] [1 2 :single] [2 3 :double]]}
    :success true}
  :counts {
    :output {
      :atoms ["C#h3#v" "O#n2#v2" "N#n#v3" "O#n2#v2"]
      :bonds [[0 1 :single] [1 2 :single] [2 3 :double]]}
    :success true}}
