umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@functional_groups_methyl-selenol.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing {:output {:atoms ["C#h3#v" "Se#h#n2#v"] :bonds [[0 1 :single]]} :success true}
  :counts {:output {:atoms ["C#h3#v" "Se#h#n2#v"] :bonds [[0 1 :single]]} :success true}}
