umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@functional_groups_methyl-thiol.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: edn_to_string_pretty(&results).unwrap()
---
{
  :atom-typing {
    :output {
      :atoms ["C#h3#v" "S#h#n2#v"]
      :bonds [[0 1 :single]]
      :charge 0
      :spin "#u0#s1"}
    :success true}
  :counts {
    :output {
      :atoms ["C#h3#v" "S#h#n2#v"]
      :bonds [[0 1 :single]]
      :charge 0
      :spin "#u0#s1"}
    :success true}}
