umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@functional_groups_methylhydrazine.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing {
    :output {
      :atoms ["C#h3#v" "N#h#n#v2" "N#h2#n#v"]
      :bonds [[0 1 :single] [1 2 :single]]}
    :success true}
  :counts {
    :output {
      :atoms ["C#h3#v" "N#h#n#v2" "N#h2#n#v"]
      :bonds [[0 1 :single] [1 2 :single]]}
    :success true}}
